--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -29,7 +29,7 @@ button {
   border: none;
 }
 .clear-btn {
-  margin-top: 10px;
+  margin-top: 5px;
   background: #ccc;
   color: #000;
 }
@@ -47,4 +47,9 @@ button {
   cursor: pointer;
 }
 
-
+.contact {
+  text-align: center;
+  font-size: 12px;
+  margin-top: 4px;
+  margin-bottom: 20px;
+}
